# ChangeLog for www-misc/xxv
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-misc/xxv/ChangeLog,v 1.10 2010/01/03 23:09:35 hd_brummy Exp $

  03 Jan 2010; Joerg Bornkessel <hd_brummy@gentoo.org> -xxv-1.0.1-r1.ebuild,
  -xxv-1.2-r1.ebuild, -xxv-1.2.1402.ebuild, -xxv-1.3.ebuild, xxv-1.4.ebuild,
  +xxv-1.5.ebuild, -files/xxv, -files/xxv.utf8-v2, -files/xxv.utf8-v3:
  clean up

*xxv-1.5 (03 Jan 2010)

  03 Jan 2010; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.4.ebuild,
  +xxv-1.5.ebuild, -files/xxv, -files/xxv.utf8-v2, -files/xxv.utf8-v3:
  version bump; xxv-1.5 testing version; clean up

*xxv-1.4 (16 Aug 2009)

  16 Aug 2009; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.2.1402.ebuild,
  xxv-1.3.ebuild, +xxv-1.4.ebuild, +files/xxv.utf8-v5:
  version bump; some eapi=2 fixes in older ebuilds

  19 Jul 2009; Torsten Veller <tove@gentoo.org> xxv-1.0.1-r1.ebuild,
  xxv-1.2-r1.ebuild, xxv-1.2.1402.ebuild, xxv-1.3.ebuild, xxv-1.3.1.ebuild:
  IO-Compress replaces Compress-Zlib

  02 May 2009; Joerg Bornkessel <hd_brummy@gentoo.org> files/xxv.utf8-v3,
  files/xxv.utf8-v4:
  fixed initscript; thanks to heiliger @vdrportal.de

*xxv-1.3.1 (02 May 2009)

  02 May 2009; Joerg Bornkessel <hd_brummy@gentoo.org> +xxv-1.3.1.ebuild,
  +files/xxv.utf8-v4:
  version bump; more detailed messages for utf-8 update on depended mysql db

  16 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.2-r1.ebuild,
  xxv-1.2.1402.ebuild:
  net-www - www-misc fix in ebuild

*xxv-1.3 (16 Apr 2009)

  16 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org> +files/xxv.utf8-v3,
  +xxv-1.3.ebuild:
  version bump

  12 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.0.1-r1.ebuild,
  xxv-1.2-r1.ebuild, xxv-1.2.1402.ebuild:
  fixed has_version to the right category

  11 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org>
  +files/xxv-1.0-logerror.patch, +files/xxvd-1.0.cfg, +files/xxv,