@@ -1,13 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX xxv-1.0-logerror.patch 1477 RMD160 3795497ed97d16af9f7b10874619f567e723cc86 SHA1 712257f3d7a98da402f3c67bbd41b6bb132ff0a3 SHA256 ac8db7fb3d75be90dc33fdf427265dcd14355e572500140718fce2c731166822
 AUX xxv.utf8-v4 2402 RMD160 0383b510616c4606fc75ee614524ccd04bb5d724 SHA1 76054d84354fde02982c114d03cafd9838a9fd26 SHA256 e5d22a0640a84332f6c5fad74650174f56ffbc900a60d0be48165fe4164bec84
 AUX xxv.utf8-v5 2113 RMD160 3dae7d1af8330d1886795c22c0f4658a8ab9aca5 SHA1 db69c5519239eb6243bd16b7966647c748baff53 SHA256 05d9f66e2bfc50231e393e861e63eb8cbec0b2c234796ae517db0dbfa08eada0
 AUX xxvd-1.0.cfg 2257 RMD160 2f0ed9987f6a85fa4bc1a7ae68b31251f4e72b00 SHA1 f82efba3aefb1216067767e52236e119da6d65dc SHA256 a49c7c402e8c9990f84e8b3ae5207559f9dd9262075b5ab0606058ff08061016
 AUX xxvd-logrotate 478 RMD160 5945c1c40750b594dce1bec7ba8cf9cc7aa43ea0 SHA1 450c4e18023716851a86a1afc8a8ce749a9e3513 SHA256 0b16eda74181e54f0beb5a3de92d2e12288270bc891e378d61a076274e53f11a
-DIST xxv-1.3.1.tgz 958202 RMD160 5fcf8aa3bd09fd18f1a48bd8d94113b2fd149904 SHA1 d9fca09c84131c82ff170d81c0e29f57274240ea SHA256 488d39f10731c793bf656a0f280bb71f577534317475ac249d86dfbe91c4ca29
 DIST xxv-1.4.tgz 915079 RMD160 af230b55e988139cc8144a6e9493a30f8277a1e6 SHA1 ff64ae9d763df2fdc83bf80a8f647e1b35ec07a2 SHA256 ae551cfc315e7b9b6035597f9bf580422e6dc71218a84c021a2855966c72ca79
 DIST xxv-1.5.tgz 987576 RMD160 e45305f4981b90e6ff9dc42791fb8a91aaf4c510 SHA1 c0040a26dfe8fa7282d84322ff3d58b2f1f9cb8a SHA256 7d7bd518b96e9cc367cd6fc036e7131a4f1faa4cac4e19d6d40b87f3ef16f594
-EBUILD xxv-1.3.1.ebuild 4489 RMD160 ae6b072b545fd2a291603cde5b3d4146da0ffdd1 SHA1 b08ac6be425f6203785fbe694cd50a1acfa6bd36 SHA256 1bf5b61d2714aff0661764e2a6a42076865bbe40609bc238e4b07056117134ff
+DIST xxv-1.6.tgz 989847 RMD160 cdcc28836a8b1d216c99c3e44c032173d25c923d SHA1 64aff646e05c5abded0d7f0d1a07326cac887e40 SHA256 36a30939d605622276e025733a404f9674379d90f37229337bfa6dccaca12a60
 EBUILD xxv-1.4.ebuild 4464 RMD160 ab9064d777df59719ec409aa2baf6123db0ba8e7 SHA1 8983e195ab2ac8439ca4e7c6d6b0f4f8592fa45c SHA256 c2be4dfb6d8d1fab2a0f302cc9033b2478d73d11041d54c70c54f30895df09e7
 EBUILD xxv-1.5.ebuild 4483 RMD160 7f158ca5536198fb045751c6d5fac8638e591b1c SHA1 cc326a769dc0c5e5af5bb75be00b2d2a4d118ab7 SHA256 1799f4a9f12ef924c0387ed124244253f4bcde14558cc40870bca3990357c3a1
-MISC ChangeLog 4733 RMD160 401c7425a4d3fa9c2293ff0de6f5ed24b40115ad SHA1 e65e6f70bde8804cd1a37caee3af26b3ffd93d1d SHA256 78c9c0a90d43025e09403599ea72709da63e39645f3042f3db5a4ad28d7becbc
+EBUILD xxv-1.6.ebuild 4483 RMD160 1e33fbe69fa76d8c3a37d37a9a0fe4b282625636 SHA1 72dc608afaf473f488d4936261c3e879026dd993 SHA256 7ed2684b8c028209dc0733eda29f50a32b0500b8cdd117817da3674aee6a6b64
+MISC ChangeLog 4875 RMD160 0a8ecdd46a3663f4e573bf375ffd23acef9e7a63 SHA1 bda807cd811aefc9038bdd6f5bcae6e507e5b0ea SHA256 381708067986d21af00f30ee66beef9a36e4906eba1ccbf5a78335dd956ac4f1
 MISC metadata.xml 607 RMD160 423ff4aae1b8fcfab1b50267a6d0084bea950655 SHA1 be987c97532f8a8efa4746ca36772352490e6b7f SHA256 b1dc077f8c2d9cba527f27261f18b2186275f7202e5393c367cd594b57d18037
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+Comment: added by hd_brummy@gentoo.org
+
+iD8DBQFL5oE6dn07HTTCgIoRAvd4AJ4rmSOY6V8VPShNzmayxetZZPasywCaAv05
+xp3rTFtziAflkMkTSaPGNm4=
+=LMNz
+-----END PGP SIGNATURE-----
