@@ -1,6 +1,12 @@
 # ChangeLog for www-misc/xxv
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/xxv/ChangeLog,v 1.10 2010/01/03 23:09:35 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/xxv/ChangeLog,v 1.11 2010/05/09 09:32:38 hd_brummy Exp $
+
+*xxv-1.6 (09 May 2010)
+
+  09 May 2010; Joerg Bornkessel <hd_brummy@gentoo.org> -xxv-1.3.1.ebuild,
+  +xxv-1.6.ebuild:
+  version bump; cleanup
 
   03 Jan 2010; Joerg Bornkessel <hd_brummy@gentoo.org> -xxv-1.0.1-r1.ebuild,
   -xxv-1.2-r1.ebuild, -xxv-1.2.1402.ebuild, -xxv-1.3.ebuild, xxv-1.4.ebuild,
